# vortex-refined

./: .gitignore  CMakeLists.txt
src/: ally.c  ally.h  armory.c  backpack.c  damage.c  damage.h  g_abilities.h  g_chase.c  g_cmds.c  g_combat.c  g_flame.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_sword.c  g_trigger.c  g_utils.c  g_weapon.c  game.h  game.vcproj  grid.c  misc_stuff.c  q_shared.c  q_shared.h  settings.h  teamplay.c  v_cmd.c  v_cmd.h  v_file_IO.c  v_items.c  v_items.h  v_maplist.c  v_maplist.h  (+8 more)
src/abil/: Spirit.c  Spirit.h  auras.c  autocannon.c  bombspell.c  cloak.c  corpseexplode.c  explodingarmor.c  flying_skull.c  forcewall.c  hook.c  jetpack.c  minisentry.c  scanner.c  scanner.h  selfdestruct.c  supplystation.c  totems.c
src/abil/laser/: common.c  laser.c
src/ai/: ai_class_dmbot.c  ai_main.c  ai_nodes.c  bot_common.c
src/gamemode/: ctf.c  domination.c  holywars.c  invasion.c  pvb.c  tbi.c
src/menu/: Talents.c  help.c  item.c  menu.h  trade.c  upgrades.c  weapon.c
src/misc/: ents.c  file_output.c
src/monster/: boss.h  boss_general.c  boss_makron.c  boss_tank.c  drone_ai.c  drone_berserk.c  drone_bitch.c  drone_brain.c  drone_decoy.c  drone_gladiator.c  drone_gunner.c  drone_infantry.c  drone_jorg.c  drone_makron.c  drone_medic.c  drone_misc.c  drone_move.c  drone_mutant.c  drone_parasite.c  drone_soldier.c  drone_supertank.c  drone_tank.c  m_flash.c
src/player/: Player.c  client.c  hud.c  menu.c  parasite.c  player_points.c  view.c  weapon.c
src/sql/: gds.h
(+8 files in other folders)
